Bug 58338 - FORMATTING: Conditional formatting causes a "clear direct formatting".
Summary: FORMATTING: Conditional formatting causes a "clear direct formatting".
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.0.0.0.beta2 target:4.1.0
Keywords:
: 56989 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-15 16:09 UTC by pierre-yves samyn
Modified: 2012-12-20 18:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Spreadsheet with cell style Date already defined (6.89 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-12-15 16:09 UTC, pierre-yves samyn
Details
Screencast (27.28 KB, image/png)
2012-12-16 22:24 UTC, vulcain
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2012-12-15 16:09:14 UTC
Created attachment 71552 [details]
Spreadsheet with cell style Date already defined

Hello

Steps to reproduce:

1. Open the attached spreadsheet (CF_Date.ods)
2. Type the current date in A1, next day in B1 (so, if current date is 15/12/12, type 15/12/12 in A1, 16/12/12 in B1)
3. Select  A1:B1, Format> Conditional formatting> Condition> Date is> Today, Style : Date

Expected result: the content of A1 is the same and  applies cell style Date, B1 no change, no conditional format

Actual result: A1's content transformed in number (formula bar) and applies cell style Date, B1 loses its format and is displayed as a number

So conditional formatting causes the equivalent of a
"clear direct formatting". 

Note: the exemple is given with "Date is" but same problem with others, for example:

1. type "AA" in A3
2. align right (ctrl+r)
3. Format> FC> Condition> Cell value is> equal to> "bb", style : Heading

A3 loses the right alignment

Reproduced (fr-discuss)

Regards
Pierre-Yves
Operating System: All
Comment 1 vulcain 2012-12-16 22:24:30 UTC
Created attachment 71605 [details]
Screencast

I confirm with LibO 4.0.0.0.beta1 (Build ID: 7906242e87d3ddb2ba9827818f2d1416d80cc7) on Ubuntu 12.04.1 x86_64
Comment 2 pierre-yves samyn 2012-12-17 08:46:42 UTC
Confirmed (fr-discuss) for :
- Windows 7 family premium
- Win7pro 64bits
- Ubuntu 12.04.1 x86_64
Comment 3 Not Assigned 2012-12-18 01:32:32 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=315b9b4a5c53eed5fd283bc329e05d7d8fbc9ebc&g=libreoffice-4-0

we need to use a copy of the original ScPatternAttr, fdo#58338


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Not Assigned 2012-12-18 01:32:49 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a028afd55decfd269268d0d1e6adcfbdc9d85d0

we need to use a copy of the original ScPatternAttr, fdo#58338



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 pierre-yves samyn 2012-12-18 13:58:54 UTC
Hello

WORKSFORME with daily :
Version 4.0.0.0.beta1+ (Build ID: 315b9b4a5c53eed5fd283bc329e05d7d8fbc9eb)

Thank you

Regards
Pierre-Yves
Comment 6 Eike Rathke (retired, only occasionally showing up) 2012-12-20 18:01:11 UTC
*** Bug 56989 has been marked as a duplicate of this bug. ***