we need to use a copy of the original ScPatternAttr, fdo#58338

Change-Id: Ic231347cb864bff073d46ddef06f65b7517c45c3